# micromissiles-unity

./: .clang-format  .coderabbit.yaml  .cursorignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Cpp_Plugins_Guide.html  Development.html  Development_Guide.html  Directory.Build.props  Keybinds_and_Controls.html  Markdown_Examples.html  Pisterlab_Micromissile.slnx  Plugins.html  Plugins_Guide.html  README.md  RELEASE.md  Simulation_Config_Guide.html  Simulation_Configuration.html  Simulation_Configuration_Guide.html  Simulation_Logging.html  Simulation_Runner.html  Simulator_Overview.html  bamlab.micromissiles.csproj  bamlab.test.csproj  bamlab.test.editmode.csproj  bamlab.test.playmode.csproj  d.html  editor_shortcuts_profile.json  hashmap.json  index.html  micromissiles-unity.sln  mono_crash.295ea945a4.0.json  package-lock.json  package.json  run_clang_format.sh
.github/workflows/: build.yaml  docs.yaml  linter.yaml  release.yaml  test.yaml
Assets/: Global Lighting Settings.lighting  Text Render Texture.renderTexture  UniversalRenderPipelineGlobalSettings.asset
Assets/Configs/: MODULE.bazel
Assets/Configs/Proto/: BUILD.bazel  agent.proto  dynamic_config.proto  sensor.proto  simulation_config.proto  state.proto  static_config.proto  transformation.proto
Assets/Editor/: AnalyzerAutoSetup.cs  GenerateProjectFiles.cs  GenerateSolutionFiles.cs
Assets/Materials/: BlueTrailMat.mat  BlueTrailMatFaded.mat  CarrierMat.mat  DroneTargetMat.mat  FloorMat.mat  HitMarkerMat.mat  Hydra70Mat.mat  InterceptorMat.mat  InterceptorOriginMat.mat  LauncherMat.mat  MicromissileMat.mat  PolarPlotMat.mat  RedTrailMat.mat  RedTrailMatFaded.mat  TextMat.mat  ThreatMat.mat  WhiteAxisMat.mat
Assets/Plugins/: libexample.dylib  libprotobuf.dylib
Assets/Proto/: MODULE.bazel
Assets/Proto/Configs/: BUILD.bazel  agent.proto  agent_config.proto  attack_behavior_config.proto  communication_config.proto  dynamic_config.proto  mailbox_config.proto  run_config.proto  simulation_config.proto  simulator_config.proto  static_config.proto  swarm_config.proto
Assets/Proto/Plugin/: BUILD.bazel  status.proto
Assets/Proto/Simulation/: BUILD.bazel  coordinates.proto  flight_phase.proto  sensor.proto  state.proto  transformation.proto
Assets/RP/: URP Pipepline Asset.asset
Assets/Scenes/: MainScene.unity
Assets/Scripts/: AerialAgent.cs  Agent.cs  AirborneAgent.cs  Interceptor.cs  Monitor.cs  ProtobufInitializer.cs  SimManager.cs  Transformation.cs  UIEventMarker.cs  UIHitMarker.cs  Utilities.cs  bamlab.micromissiles.asmdef  bamlab.micromissiles.rsp
Assets/StreamingAssets/: simulator.json  simulator.pbtxt
Assets/Tests/: AgentTestBase.cs  SensorTestBase.cs  TestBase.cs  bamlab.test.asmdef  bamlab.test.rsp
Assets/Textures/: CameraRenderTexture.renderTexture
Assets/UI Toolkit/: MainOverlay.uxml  MainOverlayTheme.uss  MessageListEntry.uss  (+2 more)
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TimeManager.asset
Tools/: aggregate_runs.py  aggregator.py  animate_log.py  build_standalone.py  constants.py  distribution.py  metric.py  mpl_config.py  multi_metric.py  process_run.py  replay_log.py  run_batch.py  scalar_metric.py  unity.py  unity_utils.py  utils.py  visualize_log.py
UIElementsSchema/: UnityEditor.Experimental.GraphView.xsd
assets/: Cpp_Plugins_Guide.md.C0FVpMzM.js  Cpp_Plugins_Guide.md.CIi4pWyZ.lean.js  Cpp_Plugins_Guide.md.CeLasfHX.js  Development.md.CbHBJi5T.js  Development.md.CbHBJi5T.lean.js  Development.md.TJ1BjAu0.js  Development.md.TJ1BjAu0.lean.js  Development_Guide.md.B0AGwfv9.js  Development_Guide.md.BKSDYoTp.js  Development_Guide.md.BKSDYoTp.lean.js  Development_Guide.md.Bl6N-YLW.js  Development_Guide.md.Bl6N-YLW.lean.js  Development_Guide.md.CiSKa4kY.lean.js  Development_Guide.md.DJ1LFQFH.js  Development_Guide.md.DJ1LFQFH.lean.js  Development_Guide.md.DK2QXl9b.js  Development_Guide.md.DK2QXl9b.lean.js  Development_Guide.md.FnbDDpgu.js  Development_Guide.md.N9TYj815.js  Development_Guide.md.N9TYj815.lean.js  Keybinds_and_Controls.md.B257LUKx.js  Keybinds_and_Controls.md.B257LUKx.lean.js  Keybinds_and_Controls.md.B2W7skSe.js  Keybinds_and_Controls.md.BqrqmkKN.js  Keybinds_and_Controls.md.BqrqmkKN.lean.js  Keybinds_and_Controls.md.CYyHmqq1.js  Keybinds_and_Controls.md.CYyHmqq1.lean.js  Keybinds_and_Controls.md.CuyUmTPQ.lean.js  Keybinds_and_Controls.md.DHXkPp_0.js  Keybinds_and_Controls.md.DHXkPp_0.lean.js  Keybinds_and_Controls.md.DQER2WGk.js  Keybinds_and_Controls.md.DQER2WGk.lean.js  Keybinds_and_Controls.md.DQXkVJit.js  Keybinds_and_Controls.md.DU8Z3STh.js  Keybinds_and_Controls.md.DU8Z3STh.lean.js  Keybinds_and_Controls.md.E-xwjMvg.js  Keybinds_and_Controls.md.E-xwjMvg.lean.js  Plugins.md.DyLq4-zK.js  Plugins.md.DyLq4-zK.lean.js  Plugins.md.yocYdmPs.js  (+221 more)
configs/: Agent.cs  DynamicConfig.cs  Transformation.cs
docs/: Batch_Runner.md  Cpp_Plugins_Guide.md  Development.md  Development_Guide.md  Keybinds_and_Controls.md  Plugins.md  Plugins_Guide.md  Simulation_Config_Guide.md  Simulation_Configuration.md  Simulation_Configuration_Guide.md  Simulation_Logging.md  Simulation_Runner.md  Simulator_Overview.md  index.md
plugins/: .bazelrc  .clang-format  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  README.md
plugins/assignment/: BUILD.bazel  assignment.cc  assignment.h  assignment_plugin.cc  cover_assignment.cc  cover_assignment.h  cover_assignment_test.cc  cp_assignment.cc  cp_assignment.h  even_assignment.cc  even_assignment.h  even_assignment_test.cc  weighted_even_assignment.cc  weighted_even_assignment.h  weighted_even_assignment_test.cc
plugins/base/: BUILD.bazel
plugins/configs/: models  proto  simulations
plugins/configs/proto/: coordinates.proto  simulator_config.proto
plugins/example/: BUILD.bazel  example.def
plugins/experimental/: BUILD.bazel  assignment_example_main.cc
plugins/protobuf/: BUILD.bazel  protobuf.def  protobuf.h  protobuf_plugin.cc  protobuf_test.cc
plugins/utils/: BUILD.bazel  protobuf.h  protobuf_test.cc
(+1807 files in other folders)
