load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

package(default_visibility = ["//visibility:public"])

cc_shared_library(
    name = "assignment",
    additional_linker_inputs = select({
        "@platforms//os:windows": ["//assignment:assignment.def"],
        "//conditions:default": [],
    }),
    win_def_file = select({
        "@platforms//os:windows": "//assignment:assignment.def",
        "//conditions:default": None,
    }),
    deps = ["//assignment:assignment_plugin"],
)

cc_shared_library(
    name = "example",
    additional_linker_inputs = select({
        "@platforms//os:windows": ["//example:example.def"],
        "//conditions:default": [],
    }),
    win_def_file = select({
        "@platforms//os:windows": "//example:example.def",
        "//conditions:default": None,
    }),
    deps = ["//example:example_plugin"],
)

cc_shared_library(
    name = "protobuf",
    additional_linker_inputs = select({
        "@platforms//os:windows": ["//protobuf:protobuf.def"],
        "//conditions:default": [],
    }),
    win_def_file = select({
        "@platforms//os:windows": "//protobuf:protobuf.def",
        "//conditions:default": None,
    }),
    deps = ["//protobuf:protobuf_plugin"],
)

pkg_tar(
    name = "plugins",
    srcs = [
        ":assignment",
        ":protobuf",
    ],
    extension = ".tar.gz",
)
