module(name = "micromissiles-unity-plugins")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.8.2",
)
bazel_dep(
    name = "bzip2",
    version = "1.0.8.bcr.2",
)
bazel_dep(
    name = "eigen",
    version = "4.0.0-20241125.bcr.3",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
)
bazel_dep(
    name = "or-tools",
    version = "9.14",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "protobuf",
    version = "32.1",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.9",
)
bazel_dep(
    name = "rules_go",
    version = "0.57.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.1.0",
)
bazel_dep(
    name = "rules_python",
    version = "1.6.3",
)
bazel_dep(
    name = "scip",
    version = "9.2.3",
)
bazel_dep(
    name = "zlib",
    version = "1.3.1.bcr.7",
)

# Configurations.
bazel_dep(
    name = "micromissiles-proto",
    version = "",
)
local_path_override(
    module_name = "micromissiles-proto",
    path = "../Assets/Proto",
)

# Configurations data.
bazel_dep(
    name = "micromissiles-configs-data",
    version = "",
)
local_path_override(
    module_name = "micromissiles-configs-data",
    path = "../Assets/StreamingAssets/Configs",
)
