module(name = "micromissiles-unity-plugins")

bazel_dep(
    name = "abseil-cpp",
    version = "20260107.0",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
)
bazel_dep(
    name = "or-tools",
    version = "9.15",
)
bazel_dep(
    name = "platforms",
    version = "1.0.0",
)
bazel_dep(
    name = "protobuf",
    version = "33.5",
)
bazel_dep(
    name = "rules_cc",
    version = "0.2.16",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.2.0",
)

# Configurations.
bazel_dep(
    name = "micromissiles-proto",
    version = "",
)
local_path_override(
    module_name = "micromissiles-proto",
    path = "../Assets/Proto",
)

# Configurations data.
bazel_dep(
    name = "micromissiles-configs-data",
    version = "",
)
local_path_override(
    module_name = "micromissiles-configs-data",
    path = "../Assets/StreamingAssets/Configs",
)
