load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

exports_files(["assignment.def"])

cc_library(
    name = "assignment",
    srcs = ["assignment.cc"],
    hdrs = ["assignment.h"],
    deps = ["@micromissiles-proto//Plugin:status_cc_proto"],
)

cc_library(
    name = "cover_assignment",
    srcs = ["cover_assignment.cc"],
    hdrs = ["cover_assignment.h"],
    deps = [
        ":cp_assignment",
        "@micromissiles-proto//Plugin:status_cc_proto",
        "@or-tools//ortools/sat:cp_model",
    ],
)

cc_test(
    name = "cover_assignment_test",
    srcs = ["cover_assignment_test.cc"],
    deps = [
        ":assignment",
        ":cover_assignment",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@micromissiles-proto//Plugin:status_cc_proto",
    ],
)

cc_library(
    name = "cp_assignment",
    srcs = ["cp_assignment.cc"],
    hdrs = ["cp_assignment.h"],
    deps = [
        ":assignment",
        "@micromissiles-proto//Plugin:status_cc_proto",
        "@or-tools//ortools/sat:cp_model",
    ],
)

cc_library(
    name = "even_assignment",
    srcs = ["even_assignment.cc"],
    hdrs = ["even_assignment.h"],
    deps = [
        ":cp_assignment",
        "@micromissiles-proto//Plugin:status_cc_proto",
        "@or-tools//ortools/sat:cp_model",
    ],
)

cc_test(
    name = "even_assignment_test",
    srcs = ["even_assignment_test.cc"],
    deps = [
        ":assignment",
        ":even_assignment",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@micromissiles-proto//Plugin:status_cc_proto",
    ],
)

cc_library(
    name = "weighted_even_assignment",
    srcs = ["weighted_even_assignment.cc"],
    hdrs = ["weighted_even_assignment.h"],
    deps = [
        ":cp_assignment",
        "@micromissiles-proto//Plugin:status_cc_proto",
        "@or-tools//ortools/sat:cp_model",
    ],
)

cc_test(
    name = "weighted_even_assignment_test",
    srcs = ["weighted_even_assignment_test.cc"],
    deps = [
        ":assignment",
        ":weighted_even_assignment",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@micromissiles-proto//Plugin:status_cc_proto",
    ],
)

cc_library(
    name = "assignment_plugin",
    srcs = ["assignment_plugin.cc"],
    deps = [
        ":assignment",
        ":cover_assignment",
        ":even_assignment",
        ":weighted_even_assignment",
        "@micromissiles-proto//Plugin:status_cc_proto",
    ],
)
