load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

exports_files(["protobuf.def"])

cc_library(
    name = "protobuf_plugin",
    srcs = ["protobuf_plugin.cc"],
    data = [
        "@micromissiles-configs-data//Models:models",
        "@micromissiles-configs-data//Simulations:simulations",
    ],
    deps = [
        ":protobuf",
        "@micromissiles-proto//Configs:simulation_config_cc_proto",
        "@micromissiles-proto//Configs:simulator_config_cc_proto",
        "@micromissiles-proto//Configs:static_config_cc_proto",
    ],
)

cc_library(
    name = "protobuf",
    hdrs = ["protobuf.h"],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
        "@protobuf",
    ],
)

cc_test(
    name = "protobuf_test",
    srcs = ["protobuf_test.cc"],
    data = [
        "@micromissiles-configs-data//Models:models",
        "@micromissiles-configs-data//Simulations:simulations",
    ],
    deps = [
        ":protobuf",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@micromissiles-proto//Configs:simulation_config_cc_proto",
        "@micromissiles-proto//Configs:static_config_cc_proto",
    ],
)
