load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "agent_config_proto",
    srcs = ["agent_config.proto"],
    deps = [
        ":dynamic_config_proto",
        "//Simulation:state_proto",
    ],
)

cc_proto_library(
    name = "agent_config_cc_proto",
    deps = [":agent_config_proto"],
)

proto_library(
    name = "dynamic_config_proto",
    srcs = ["dynamic_config.proto"],
    deps = ["//Simulation:sensor_proto"],
)

cc_proto_library(
    name = "dynamic_config_cc_proto",
    deps = [":dynamic_config_proto"],
)

proto_library(
    name = "simulation_config_proto",
    srcs = ["simulation_config.proto"],
    deps = [":swarm_config_proto"],
)

cc_proto_library(
    name = "simulation_config_cc_proto",
    deps = [":simulation_config_proto"],
)

proto_library(
    name = "simulator_config_proto",
    srcs = ["simulator_config.proto"],
)

cc_proto_library(
    name = "simulator_config_cc_proto",
    deps = [":simulator_config_proto"],
)

proto_library(
    name = "static_config_proto",
    srcs = ["static_config.proto"],
)

cc_proto_library(
    name = "static_config_cc_proto",
    deps = [":static_config_proto"],
)

proto_library(
    name = "swarm_config_proto",
    srcs = ["swarm_config.proto"],
    deps = [":agent_config_proto"],
)

cc_proto_library(
    name = "swarm_config_cc_proto",
    deps = [":swarm_config_proto"],
)
