load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "coordinates_proto",
    srcs = ["coordinates.proto"],
)

cc_proto_library(
    name = "coordinates_cc_proto",
    deps = [":coordinates_proto"],
)

proto_library(
    name = "flight_phase_proto",
    srcs = ["flight_phase.proto"],
)

cc_proto_library(
    name = "flight_phase_cc_proto",
    deps = [":flight_phase_proto"],
)

proto_library(
    name = "sensor_proto",
    srcs = ["sensor.proto"],
    deps = [":coordinates_proto"],
)

cc_proto_library(
    name = "sensor_cc_proto",
    deps = [":sensor_proto"],
)

proto_library(
    name = "state_proto",
    srcs = ["state.proto"],
    deps = [":coordinates_proto"],
)

cc_proto_library(
    name = "state_cc_proto",
    deps = [":state_proto"],
)

proto_library(
    name = "transformation_proto",
    srcs = ["transformation.proto"],
    deps = [":coordinates_proto"],
)

cc_proto_library(
    name = "transformation_cc_proto",
    deps = [":transformation_proto"],
)
